<resources>
    <string name="app_name">Expense Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="take_control_of_your_finances_with_expense_tracker">Take Control of Your Finances with Expense Tracker</string>
    <string name="please_signup">Please SignUp</string>
    <string name="please_login">Please Login</string>
    <string name="enter_username">Enter UserName</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_fullname">Enter FullName</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="not_a_user_please_signup">Not a User? Please Signup</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="total_balance">Total Balance</string>
</resources>