<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.SignUpFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingTop="100dp"
        android:text="@string/please_signup"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fullname_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/primary_color_one"
        android:elevation="10dp"
        android:hint="@string/enter_fullname"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

    <EditText
        android:id="@+id/username_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/primary_color_one"
        android:elevation="10dp"
        android:hint="@string/enter_username"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

    <EditText
        android:id="@+id/password_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/primary_color_one"
        android:elevation="10dp"
        android:hint="@string/enter_password"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

    <EditText
        android:id="@+id/confirm_password_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/primary_color_one"
        android:elevation="10dp"
        android:hint="@string/confirm_password"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/primary_btn"
        android:elevation="20dp"
        android:text="@string/signup"
        android:textColor="@color/white" />


</LinearLayout>