<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".fragments.LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingTop="100dp"
        android:text="@string/please_login"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:background="@color/primary_color_one"
        android:elevation="10dp"
        android:hint="@string/enter_username"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

    <EditText
        android:id="@+id/userpassword_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/primary_color_one"
        android:elevation="10dp"
        android:hint="@string/enter_password"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/primary_btn"
        android:elevation="20dp"
        android:text="@string/login"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/not_a_user_please_signup"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>